# mock

./: .gitignore  .goreleaser.yml  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS  Makefile  README.md  go.mod  go.sum
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yaml  test.yaml
bazel/: .gitignore  MODULE.bazel  go.mod  go.sum
bazel/rules/: BUILD.bazel  gomock.bzl  tools.go
bazel/tests/: README.rst
bazel/tests/archive/: BUILD.bazel  client.go
bazel/tests/reflective/: BUILD.bazel
bazel/tests/source/: BUILD.bazel  client_test.go  client_wrapper.go
bazel/tests/source_with_importpath/: BUILD.bazel  client_test.go
ci/: test.sh
gomock/: call.go  call_test.go  callset.go  callset_test.go  controller.go  controller_test.go  example_test.go  matchers.go  matchers_test.go  mock_test.go  overridable_controller_test.go  string.go  string_test.go
gomock/internal/mock_gomock/: mock_matcher.go
mockgen/: archive.go  deprecated.go  generic.go  generic_go118.go  generic_notgo118.go  gob.go  gob_test.go  import_mode.go  import_mode_test.go  mockgen.go  mockgen_test.go  package_mode.go  package_mode_test.go  parse.go  parse_test.go  reflect.go  version.go
mockgen/api/: generic.go  mockgen.go  mockgen_test.go  parse.go  parse_test.go  reflect.go  version.go
mockgen/internal/model/: model.go
mockgen/internal/tests/add_generate_directive/: import.go  mock.go
mockgen/internal/tests/alias/: interfaces.go
mockgen/internal/tests/aux_imports_embedded_interface/: bugreport.go  bugreport_mock.go  bugreport_test.go
mockgen/internal/tests/build_constraint/: input.go  mock.go
mockgen/internal/tests/build_flags/: directive.go  interfaces_1.go  interfaces_2.go
mockgen/internal/tests/const_array_length/: mock.go
mockgen/internal/tests/copyright_file/: input.go  mock.go
mockgen/internal/tests/defined_import_local_name/: input.go  mock.go
mockgen/internal/tests/dot_imports/: mock.go
mockgen/internal/tests/embed/: mock.go  mock_test.go
mockgen/internal/tests/empty_interface/: input.go  mock.go
mockgen/internal/tests/exclude/: interfaces.go  mock.go
mockgen/internal/tests/extra_import/: mock.go
mockgen/internal/tests/generated_identifier_conflict/: bugreport_mock.go  bugreport_test.go
mockgen/internal/tests/generics/: external.go  generics.go  generics_alias.go  go.mod
mockgen/internal/tests/import_aliased/: source.go  source_mock.go
mockgen/internal/tests/import_embedded_interface/: bugreport_mock.go  bugreport_test.go  net_mock.go  net_test.go
mockgen/internal/tests/import_mode/: interfaces.go
mockgen/internal/tests/import_shadowing/: import.go  mock.go
mockgen/internal/tests/import_source/: source_mock.go
mockgen/internal/tests/internal_pkg/: generate.go
mockgen/internal/tests/mock_in_test_package/: mock_test.go
mockgen/internal/tests/mock_name/: mocks.go  mocks_test.go
mockgen/internal/tests/no_interfaces/: input.go
mockgen/internal/tests/overlapping_methods/: mock.go  overlap_test.go
mockgen/internal/tests/package_comment/: input.go  mock.go
mockgen/internal/tests/package_mode/: interfaces.go
mockgen/internal/tests/panicing_test/: mock_test.go  panic_test.go
mockgen/internal/tests/private/: interfaces.go  interfaces_mock.go  interfaces_test.go
mockgen/internal/tests/sanitization/: interface.go  sanitization_test.go
mockgen/internal/tests/self_package/: mock.go
mockgen/internal/tests/signature/: signatures.go
mockgen/internal/tests/test_package/: mock_test.go
mockgen/internal/tests/typed/: bugreport.go  bugreport_mock.go  bugreport_test.go  go.mod  go.sum
mockgen/internal/tests/typed_inorder/: input.go  (+2 more)
mockgen/model/: model.go  model_gotypes.go  model_test.go
sample/: mock_user_test.go  user.go  user_test.go
sample/concurrent/: README.md  concurrent_test.go
sample/concurrent/mock/: concurrent_mock.go
sample/imp4/: imp4.go
tools/: go.mod
tools/cmd/extract-changelog/: main.go  main_test.go
(+62 files in other folders)
